@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,7 +15,7 @@ package org.openhab.binding.freeboxos.internal.handler;
 import static org.openhab.binding.freeboxos.internal.FreeboxOsBindingConstants.*;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -35,8 +35,8 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * The {@link ActivePlayerHandler} is responsible for handling everything associated to Freebox Player with api
- * capabilities.
+ * The {@link ActivePlayerHandler} is responsible for handling everything associated to Freebox Player
+ * with api capabilities.
  *
  * @author Gaël L'hopital - Initial contribution
  */
@@ -59,8 +59,10 @@ public class ActivePlayerHandler extends PlayerHandler implements FreeDeviceIntf
         Player player = getManager(PlayerManager.class).getDevice(getClientId());
         if (player.reachable()) {
             Configuration config = getManager(PlayerManager.class).getConfig(player.id());
-            properties.put(Thing.PROPERTY_SERIAL_NUMBER, config.serial());
-            properties.put(Thing.PROPERTY_FIRMWARE_VERSION, config.firmwareVersion());
+            if (config != null) {
+                properties.put(Thing.PROPERTY_SERIAL_NUMBER, config.serial());
+                properties.put(Thing.PROPERTY_FIRMWARE_VERSION, config.firmwareVersion());
+            }
         }
     }
 
@@ -68,15 +70,24 @@ public class ActivePlayerHandler extends PlayerHandler implements FreeDeviceIntf
     protected void internalPoll() throws FreeboxException {
         super.internalPoll();
         if (thing.getStatus().equals(ThingStatus.ONLINE)) {
-            Status status = getManager(PlayerManager.class).getPlayerStatus(getClientId());
-            updateChannelString(PLAYER_STATUS, PLAYER_STATUS, status.powerState().name());
-            ForegroundApp foreground = status.foregroundApp();
-            if (foreground != null) {
-                updateChannelString(PLAYER_STATUS, PACKAGE, foreground._package());
+            Player player = getManager(PlayerManager.class).getDevice(getClientId());
+            updateStatus(player.reachable() ? ThingStatus.ONLINE : ThingStatus.OFFLINE);
+            if (player.reachable()) {
+                Status status = getManager(PlayerManager.class).getPlayerStatus(getClientId());
+                if (status != null) {
+                    updateChannelString(PLAYER_STATUS, PLAYER_STATUS, status.powerState().name());
+                    ForegroundApp foreground = status.foregroundApp();
+                    if (foreground != null) {
+                        updateChannelString(PLAYER_STATUS, PACKAGE, foreground._package());
+                    }
+                }
+                Configuration config = getManager(PlayerManager.class).getConfig(getClientId());
+                if (config != null) {
+                    uptime = checkUptimeAndFirmware(config.uptimeVal(), uptime, config.firmwareVersion());
+                } else {
+                    uptime = 0;
+                }
             }
-            Configuration config = getManager(PlayerManager.class).getConfig(getClientId());
-
-            uptime = checkUptimeAndFirmware(config.uptimeVal(), uptime, config.firmwareVersion());
             updateChannelQuantity(SYS_INFO, UPTIME, uptime, Units.SECOND);
         }
     }
@@ -84,7 +95,9 @@ public class ActivePlayerHandler extends PlayerHandler implements FreeDeviceIntf
     public void reboot() {
         processReboot(() -> {
             try {
-                getManager(PlayerManager.class).reboot(getClientId());
+                if (!getManager(PlayerManager.class).reboot(getClientId())) {
+                    logger.warn("Unable to reboot the player - probably not reachable");
+                }
             } catch (FreeboxException e) {
                 logger.warn("Error rebooting: {}", e.getMessage());
             }
@@ -93,7 +106,7 @@ public class ActivePlayerHandler extends PlayerHandler implements FreeDeviceIntf
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(ActivePlayerActions.class);
+        return List.of(ActivePlayerActions.class);
     }
 
     @Override
