@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -18,7 +18,6 @@ import java.io.IOException;
 import java.io.StringReader;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
@@ -179,8 +178,8 @@ public class OnkyoHandler extends OnkyoUpnpHandler implements OnkyoEventListener
                 handleVolumeSet(EiscpCommand.Zone.ZONE1, volumeLevelZone1, command);
                 break;
             case CHANNEL_INPUT:
-                if (command instanceof DecimalType) {
-                    selectInput(((DecimalType) command).intValue());
+                if (command instanceof DecimalType decimalCommand) {
+                    selectInput(decimalCommand.intValue());
                 } else if (command.equals(RefreshType.REFRESH)) {
                     sendCommand(EiscpCommand.SOURCE_QUERY);
                 }
@@ -190,6 +189,13 @@ public class OnkyoHandler extends OnkyoUpnpHandler implements OnkyoEventListener
                     sendCommand(EiscpCommand.LISTEN_MODE_SET, command);
                 } else if (command.equals(RefreshType.REFRESH)) {
                     sendCommand(EiscpCommand.LISTEN_MODE_QUERY);
+                }
+                break;
+            case CHANNEL_AUDYSSEYEQ:
+                if (command instanceof DecimalType) {
+                    sendCommand(EiscpCommand.AUDYSSEYEQ_SET, command);
+                } else if (command.equals(RefreshType.REFRESH)) {
+                    sendCommand(EiscpCommand.AUDYSSEYEQ_QUERY);
                 }
                 break;
 
@@ -420,6 +426,10 @@ public class OnkyoHandler extends OnkyoUpnpHandler implements OnkyoEventListener
                     updateState(CHANNEL_LISTENMODE,
                             convertDeviceValueToOpenHabState(data.getValue(), DecimalType.class));
                     break;
+                case AUDYSSEYEQ:
+                    updateState(CHANNEL_AUDYSSEYEQ,
+                            convertDeviceValueToOpenHabState(data.getValue(), DecimalType.class));
+                    break;
 
                 /*
                  * ZONE 2
@@ -562,7 +572,7 @@ public class OnkyoHandler extends OnkyoUpnpHandler implements OnkyoEventListener
 
             } else if (classToConvert == OnOffType.class) {
                 index = Integer.parseInt(data, 16);
-                state = index == 0 ? OnOffType.OFF : OnOffType.ON;
+                state = OnOffType.from(index != 0);
 
             } else if (classToConvert == DecimalType.class) {
                 index = Integer.parseInt(data, 16);
@@ -793,11 +803,11 @@ public class OnkyoHandler extends OnkyoUpnpHandler implements OnkyoEventListener
             } else if (command instanceof StringType) {
                 val = String.format(valTemplate, command);
 
-            } else if (command instanceof DecimalType) {
-                val = String.format(valTemplate, ((DecimalType) command).intValue());
+            } else if (command instanceof DecimalType decimalCommand) {
+                val = String.format(valTemplate, decimalCommand.intValue());
 
-            } else if (command instanceof PercentType) {
-                val = String.format(valTemplate, ((DecimalType) command).intValue());
+            } else if (command instanceof PercentType percentCommand) {
+                val = String.format(valTemplate, percentCommand.intValue());
             } else {
                 val = valTemplate;
             }
@@ -827,6 +837,7 @@ public class OnkyoHandler extends OnkyoUpnpHandler implements OnkyoEventListener
             sendCommand(EiscpCommand.INFO_QUERY);
             sendCommand(EiscpCommand.AUDIOINFO_QUERY);
             sendCommand(EiscpCommand.VIDEOINFO_QUERY);
+            sendCommand(EiscpCommand.AUDYSSEYEQ_QUERY);
 
             if (isChannelAvailable(CHANNEL_POWERZONE2)) {
                 sendCommand(EiscpCommand.ZONE2_POWER_QUERY);
@@ -857,12 +868,11 @@ public class OnkyoHandler extends OnkyoUpnpHandler implements OnkyoEventListener
     }
 
     private void handleVolumeSet(EiscpCommand.Zone zone, final State currentValue, final Command command) {
-        if (command instanceof PercentType) {
-            sendCommand(EiscpCommand.getCommandForZone(zone, EiscpCommand.VOLUME_SET),
-                    downScaleVolume((PercentType) command));
+        if (command instanceof PercentType percentCommand) {
+            sendCommand(EiscpCommand.getCommandForZone(zone, EiscpCommand.VOLUME_SET), downScaleVolume(percentCommand));
         } else if (command.equals(IncreaseDecreaseType.INCREASE)) {
-            if (currentValue instanceof PercentType) {
-                if (((DecimalType) currentValue).intValue() < configuration.volumeLimit) {
+            if (currentValue instanceof PercentType percentCommand) {
+                if (percentCommand.intValue() < configuration.volumeLimit) {
                     sendCommand(EiscpCommand.getCommandForZone(zone, EiscpCommand.VOLUME_UP));
                 } else {
                     logger.info("Volume level is limited to {}, ignore volume up command.", configuration.volumeLimit);
@@ -881,8 +891,8 @@ public class OnkyoHandler extends OnkyoUpnpHandler implements OnkyoEventListener
     }
 
     private State handleReceivedVolume(State volume) {
-        if (volume instanceof DecimalType) {
-            return upScaleVolume(((DecimalType) volume));
+        if (volume instanceof DecimalType decimalCommand) {
+            return upScaleVolume(decimalCommand);
         }
         return volume;
     }
@@ -921,8 +931,8 @@ public class OnkyoHandler extends OnkyoUpnpHandler implements OnkyoEventListener
     }
 
     public PercentType getVolume() throws IOException {
-        if (volumeLevelZone1 instanceof PercentType) {
-            return (PercentType) volumeLevelZone1;
+        if (volumeLevelZone1 instanceof PercentType percentCommand) {
+            return percentCommand;
         }
 
         throw new IOException();
@@ -944,6 +954,6 @@ public class OnkyoHandler extends OnkyoUpnpHandler implements OnkyoEventListener
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(OnkyoThingActions.class);
+        return List.of(OnkyoThingActions.class);
     }
 }
